--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,14 +9,12 @@ stages:
   - build
   - release
 
-before_script:
-  - apk add build-base
-  - cd $CI_PROJECT_DIR
-  - make dep
-
 test:
   stage: test
   script:
+    - cd $CI_PROJECT_DIR
+    - apk add build-base
+    - make dep
     - make test_with_coverage
   artifacts:
     when: always
@@ -25,8 +23,12 @@ test:
 
 build:
   stage: build
+  only:
+    - master
   script:
-    - apk add git upx
+    - cd $CI_PROJECT_DIR
+    - apk add build-base git upx
+    - make dep
     - make
     - make optimize
   artifacts:
@@ -36,11 +38,8 @@ build:
 release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
-  rules:
-    - if: $CI_COMMIT_TAG
-  needs:
-    - job: build
-      artifacts: true
+  only:
+    - tags
   script:
     - echo "Release job"
   release:
